--- a/index.html
+++ b/index.html
@@ -8,6 +8,42 @@
     <title>Document</title>
 </head>
 <body>
+    <h3>The current player is: Player<span id="current-player">1</span></h3>
+    <h3 id="result"></h3>
+
+    <div class="grid">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+        <div class="taken"></div>
+    </div>
+
     <script src="assets/js/index.js" type="text/javascript"></script>
 </body>
 </html>
