--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="assets/css/style.css" rel="stylesheet">
-    <title>Document</title>
+    <title>Connect Four</title>
 </head>
 <body>
     <h3>The current player is: Player<span id="current-player">1</span></h3>
