--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
         <div></div>
         <div></div>
         <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
         <div class="taken"></div>
         <div class="taken"></div>
         <div class="taken"></div>
